--- a/fav-band/help.html
+++ b/fav-band/help.html
@@ -9,9 +9,37 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="container">
-    <div class="container-body">
-
-    </div>
+    <div class="nav-top">
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand">Fav-Band Inc</a>
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="email" placeholder="Enter Email" aria-label="email">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Subscribe</button>
+        </form>
+      </nav>
+      </div>
+      <div class="nav-below">
+        <ul class="nav nav-pills">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="features.html">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="aboutus.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="help.html">Help</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="pricing.html">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="blog.html">Blog</a>
+              </li>
+          </ul>
+      </div>
     
 </body>
 </html>
