--- a/fav-band/index.html
+++ b/fav-band/index.html
@@ -9,9 +9,74 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="container">
-    <div class="container-body">
+    <div class="nav-top">
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand">Fav-Band Inc</a>
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="email" placeholder="Enter Email" aria-label="email">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Subscribe</button>
+        </form>
+      </nav>
+      </div>
+      <div class="nav-below">
+        <ul class="nav nav-pills">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="features.html">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="aboutus.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="help.html">Help</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="pricing.html">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="blog.html">Blog</a>
+              </li>
+          </ul>
+      </div>
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/band1.jpg" class="d-block w-100" alt="band image">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>The Come Back</h5>
+              <p>The new single and music video out now</p>
+            </div>
+          </div>
+          <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/band1.jpg" class="d-block w-100" alt="image">
+              </div>
+              <div class="carousel-item">
+                <img src="img/band3.png" class="d-block w-100" alt="image">
+              </div>
+              <div class="carousel-item">
+                <img src="img/band4.png" class="d-block w-100" alt="image">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+      <div>
 
-    </div>
-    
+      </div>
 </body>
 </html>
