--- a/fav-band/features.html
+++ b/fav-band/features.html
@@ -19,26 +19,27 @@
       </nav>
       </div>
       <div class="nav-below">
-        <ul class="nav nav-pills">
+        <ul class="nav justify-content-end">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" href="index.html">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="features.html">Features</a>
+              <a class="nav-link" href="aboutus.html">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="aboutus.html">About</a>
+              <a class="nav-link" href="features.html">FEATURES</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="help.html">Help</a>
+              <a class="nav-link active" href="help.html">HELP</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="pricing.html">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="blog.html">Blog</a>
-              </li>
+              <a class="nav-link" href="pricing.html">PRICING</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="blog.html">BLOG</a>
+            </li>
+            
           </ul>
-      </div>
+    </div>
 </body>
 </html>
