add form and textarea on help page

--- a/fav-band/index.html
+++ b/fav-band/index.html
@@ -56,19 +56,19 @@
   </div>
 
     <div class="img-top">
-        <img src="img/band1.jpg" alt="image">
+        <img src="img/band1.jpg" alt="image"><br>
         <p>ALBUM</p>
         <h3>MADE IN LAGOS</h3>
     </div>
     <br><br>
-    <br><br>
+    
     <div class="img-top">
-        <img src="img/band1.jpg" alt="image">
+        <img src="img/band1.jpg" alt="image"><br>
         <p>ALBUM</p>
         <h3>MADE IN LAGOS</h3>
     </div>
     <br><br>
-    <br><br>
+    
 
 
 <!-- sidebar -->
