--- a/fav-band/help.html
+++ b/fav-band/help.html
@@ -40,6 +40,33 @@
             </li>
             
           </ul>
+          <!-- form -->
+          <form>
+            <label for="">Fullname</label><br>
+            <input type="text" placeholder="Surname First" required id="">
+            <br><br>
+
+            <label for="">Email Address</label><br>
+            <input type="email" placeholder="email address" required id="">
+            <br><br>
+
+            <label for="">Date of Birth</label><br>
+            <input type="date" placeholder="Date" required id="">
+            <br><br>
+
+            <label for="">Phone Number</label><br>
+            <input type="number" required id="">
+            <br><br>
+
+            <label for="">Time</label><br>
+            <input type="time" required id="">
+            <br><br>
+
+            <textarea col="50" rows="10">
+
+            </textarea>
+
+          </form>
     </div>
     
 </body>
