add content with h1 and paragraph tag on index page

--- a/fav-band/index.html
+++ b/fav-band/index.html
@@ -56,18 +56,24 @@
   </div>
 
     <div class="img-top">
-        <img src="img/band1.jpg" alt="image"><br>
-        <p>ALBUM</p>
-        <h3>MADE IN LAGOS</h3>
+        <img src="img/band4.png" alt="image"><br>
+        <p>SINGLE</p>
+        <h3>TAKE MY BREATH</h3>
+        <button type="button">LISTEN</button>
     </div>
     <br><br>
     
-    <div class="img-top">
-        <img src="img/band1.jpg" alt="image"><br>
+    <div class="img-top1">
+        <img src="img/band3.png" alt="image"><br>
         <p>ALBUM</p>
         <h3>MADE IN LAGOS</h3>
+        <button type="button">LISTEN</button>
     </div>
     <br><br>
+    <div>
+      <h1>WHERE GOODNESS GROW</h1>
+      <P>At Camp Southern Ground we believe in helping to grow more good into the world. We also know that families all across America want their kids to grow into good people. Yet today with our kids stuck behind screens, being bullied in schools, or just struggling to fit in and be themselves—goodness can seem hard to find! Camp Southern Ground wants to be the place where your child can have good fun, eat good food, connect with good friends, and learn the confidence to go put more good into the world.</P>
+    </div>
     
 
 
