--- a/fav-band/gallery.html
+++ b/fav-band/gallery.html
@@ -38,6 +38,23 @@
           
         </ul>
     </div>
+    <!-- coloumn -->
+     <h2>IMAGE GALLERY</h2>
+    <div class="row">
+    <div class="col-md-3">
+        <img src="img/img11.jpg" alt="Gallery">
+    </div>
+    <div class="col-md-3">
+        <img src="img/page img1.jpg" alt="Gallery">
+    </div>
+    <div class="col-md-3">
+        <img src="img/band3.png" alt="Gallery">
+    </div>
+    <div class="col-md-3">
+        <img src="img/page img2.jpg" alt="Gallery"> 
+    </div>
+    </div>
+    
     <footer>
       COPYRIGHT REPUBLIC RECORDS
       PRIVACY POLICY
