add button to contact page

--- a/fav-band/contact.html
+++ b/fav-band/contact.html
@@ -62,8 +62,15 @@
 
             <textarea col="50" rows="10">
 
-            </textarea>
+            </textarea><br>
+            
+            <button class="button">SUBMIT</button><br>
+            <br><br>
+            <br><br>
+
             <P>Emails will be sent by or on behalf of Universal Music Group 2220 Colorado Avenue, Santa Monica, CA 90404 (310) 865-4000. You may withdraw your consent at any time. Privacy Policy / Do Not Sell My Personal Information</P>
+
+        
           </form>
     </div>
     <footer>
