--- a/fav-band/gallery.html
+++ b/fav-band/gallery.html
@@ -55,6 +55,17 @@
     </div>
     </div>
     
+    <div class="row">
+        <div class="col-md-4">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/YfUpV_Y9on0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+        <div class="col-md-4">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/uuqsftzCt5M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+        <div class="col-md-4">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/gqI5_Luf_kk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    </div>
     <footer>
       COPYRIGHT REPUBLIC RECORDS
       PRIVACY POLICY
