--- a/fav-band/index.html
+++ b/fav-band/index.html
@@ -44,14 +44,12 @@
         <h1>WELCOME TO OUR BAND PAGE</h1>
     </div>
 
-    <div class="card" style="width: 18rem;">
-        <img src="img/band4.png" class="card-img-top" alt="image2">
-        <div class="card-body">
-          <h5 class="card-title">Life is beautiful</h5>
-          <p class="card-text">“Music touches us emotionally, where words alone can't.” “Where words fail, music speaks.” “Music is the universal language of mankind.”</p>
-          <a href="#" class="btn btn-primary">LISTEN</a>
-        </div>
-      </div>
+
+    
+
+
+      <div class="row">
+          <div class="col-md-6">
       <div class="card" style="width: 18rem;">
         <img src="img/band3.png" class="card-img-top" alt="image1">
         <div class="card-body">
@@ -60,6 +58,8 @@
           <a href="#" class="btn btn-primary">LISTEN</a>
         </div>
       </div>
+    </div>
+    </div>
     <div class="row">
         <div class="col-md-4">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/YfUpV_Y9on0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
