add styling to home page

--- a/fav-band/index.html
+++ b/fav-band/index.html
@@ -43,6 +43,7 @@
     <div class="top-level">
         <h1>WELCOME TO OUR BAND PAGE</h1>
     </div>
+    <br>
 
 
     
@@ -60,32 +61,39 @@
       </div>
     </div>
     </div>
+    <br><br>
+
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-2.5">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/YfUpV_Y9on0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-        <div class="col-md-4">
+        <div class="col-md-2.5">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/uuqsftzCt5M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-        <div class="col-md-4">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/gqI5_Luf_kk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-    </div>
+    <br><br>
+    <br><br>
 
 
-<div class="down-below">
-    <h1>VISIT OUR OFFICIAL ONLINE SHOP</h1>
+<br><br>
+<h1> VISIT OUR OFFICIAL ONLINE SHOP </h1>
+
+<div class="jumbotron">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam molestias dolores eveniet rerum doloremque eius, voluptas ut tempore quo quibusdam recusandae error cum esse fugit pariatur? Reiciendis cumque et corporis!</p>
 </div>
-
-<div>
-
+<div class="jumbotron">
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam molestias dolores eveniet rerum doloremque eius, voluptas ut tempore quo quibusdam recusandae error cum esse fugit pariatur? Reiciendis cumque et corporis!</p>
 </div>
+<br><br>
+<br><br>
 
-<footer>
+
+<footer><br>
+<em>
 COPYRIGHT REPUBLIC RECORDS
 PRIVACY POLICY
 TERMS & CONDITIONS
 DO NOT SELL MY PERSONAL INFORMATION
+</em>
 </footer>
 <div class="nav-below">
     <ul class="nav justify-content-end">
