add image to services page

--- a/fav-band/services.html
+++ b/fav-band/services.html
@@ -40,9 +40,10 @@
         </ul>
     <div id="services">
         <h1>OUR SERVICES</h1>
+        <img src="img/img22.jpg" alt="img1">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam omnis, iste voluptate ipsa nostrum officia similique nemo, voluptatibus quam eius quo tempora architecto laborum maiores? Culpa, expedita perferendis! Dolores, commodi.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora minima blanditiis eum odio, quas accusamus animi culpa voluptates tenetur et, ut provident! Necessitatibus accusamus a ullam minima at deserunt nostrum!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est delectus nemo fugiat eveniet, error rerum iste quas aspernatur voluptate, laboriosam numquam deleniti reprehenderit esse optio ipsam totam consequatur. Delectus, autem!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est delectus nemo fugiat eveniet, error rerum iste quas aspernatur voluptate, laboriosam numquam deleniti reprehenderit esse optio ipsam totam consequatur.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque deserunt laboriosam corporis. Perspiciatis atque praesentium hic. Maiores excepturi, neque omnis modi illo delectus fugit impedit quis. Unde tempora sunt id.</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam omnis, iste voluptate ipsa nostrum officia similique nemo, voluptatibus quam eius quo tempora architecto laborum maiores? Culpa, expedita perferendis! Dolores, commodi.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora minima blanditiis eum odio, quas accusamus animi culpa voluptates tenetur et, ut provident! Necessitatibus accusamus a ullam minima at deserunt nostrum!</p>
