add images to carousel and edit image with css

--- a/animal-hus/index.html
+++ b/animal-hus/index.html
@@ -14,28 +14,35 @@
 <body>
     <div class="container">
         <!-- Nav-Bar -->
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                aria-expanded="false">TOPIC</a>
-            <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Benefit</a>
-                <a class="dropdown-item" href="#">Birth, Death and Care</a>
-                <a class="dropdown-item" href="#">Business</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Find information and services</a>
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Career</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Profile</a>
+            </li>
+        </ul>
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                  <img src="img/img1.jpg" class="d-block w-100" alt="image">
+              </div>
+              <div class="carousel-item">
+                <img src="img/img2.jpg" class="d-block w-100" alt="image">
+              </div>
             </div>
-        </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                aria-expanded="false">GOVERNMENT ACTIVITY</a>
-            <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Department</a>
-                <a class="dropdown-item" href="#">Animal Research and Statistic</a>
-                <a class="dropdown-item" href="#">Policy paper and consultation</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Find information and services</a>
-            </div>
-        </li>
+          </div>
+
+        
 
     </div>
 
