add row and column to index page

--- a/animal-hus/index.html
+++ b/animal-hus/index.html
@@ -40,7 +40,35 @@
                 <img src="img/img2.jpg" class="d-block w-100" alt="image">
               </div>
             </div>
-          </div>
+        </div><br>
+
+        <div class="row">
+            <div class="col-4">
+                <h3>Our Divisions</h3>
+                <p>We are one of the foremost operators in the Nigerian livestock industry providing livestock feeds, training, premixes, health products, equipment and housing consultation and technical laboratory services for disease diagnosis, feed analysis and research.</p>
+            </div>
+            <div class="col-4">
+                <h3>Our Operations</h3>
+                <p>Our farm operations began in 1983 as a small scale poultry farm and has grown today to become on of the largest layer farms in Nigeria rearing uniform Point of Lay pullets for farmers accross the country and producing premium table eggs for consumers all over Nigeria.</p>
+            </div>
+            <div class="col-4">
+                <h3>Our Leadership</h3>
+                <p>Our Leadership consists of veterinarians, poultry scientists, pharmacist, engineers, accountants and animal scientists among others that have over 600 combined years of experience in then livestock industry.</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <h3>Our History</h3>
+                <p>With over 40 years of experience in Farming, we have proven our level of expertise in the sector. With different recognition from the government, public and private enterprises. Learn from the best and let’s help you start your own Agric Business in Poultry Management or Aquaculture Production.</p>
+            </div>
+            <div class="col-6">
+                <img src="img/img2.jpg" class="d-block w-100" alt="image">
+            </div>
+
+
+        </div>
+
 
         
 
