add h2 and paragraph on index page

--- a/animal-hus/index.html
+++ b/animal-hus/index.html
@@ -55,18 +55,22 @@
                 <h3>Our Leadership</h3>
                 <p>Our Leadership consists of veterinarians, poultry scientists, pharmacist, engineers, accountants and animal scientists among others that have over 600 combined years of experience in then livestock industry.</p>
             </div>
-        </div>
+        </div><br>
 
         <div class="row">
             <div class="col-6">
                 <h3>Our History</h3>
-                <p>With over 40 years of experience in Farming, we have proven our level of expertise in the sector. With different recognition from the government, public and private enterprises. Learn from the best and let’s help you start your own Agric Business in Poultry Management or Aquaculture Production.</p>
+                <p>With over 40 years of experience in Animal Husbandry, we have proven our level of expertise in the sector. With different recognition from the government, public and private enterprises. Pet microchip databases will also be made more accessible under the proposals. There are currently 16 microchipping databases in England, however the Taskforce found that they can be difficult to navigate for pet owners and law enforcement, making it difficult to trace stolen dogs. Under the new proposals a single point of access to all databases will simplify and streamline the system and more robust rules will also be introduced across all of the pet microchipping databases for recording the transfer of dogs to new owners to ensure full traceability.Taken together, these proposals will make it far harder for thieves to steal and sell pets, will make it easier for the police to catch them, and will ensure that the impact on the animal is reflected in the sentences or penalties given to offenders.</p>
             </div>
             <div class="col-6">
                 <img src="img/img2.jpg" class="d-block w-100" alt="image">
             </div>
+        </div><br>
 
-
+        <div class="growth-c">
+            <h2>CAREER AT ANIME HOUSE</h2>
+            <p>We’re a highly professional and socially responsible organization moreCome see what makes Animal Care a great place to work.</p>
+            <button type="career.html">View Careers</button>
         </div>
 
 
