add card to add more image and paragraph to the page

--- a/animal-hus/index.html
+++ b/animal-hus/index.html
@@ -71,6 +71,27 @@
             <h2>CAREER AT ANIME HOUSE</h2>
             <p>We’re a highly professional and socially responsible organization moreCome see what makes Animal Care a great place to work.</p>
             <button type="career.html">View Careers</button>
+        </div><br><br>
+
+        <div class="row row-cols-1 row-cols-md-2">
+            <div class="col mb-4">
+              <div class="card">
+                <img src="img/img5.png" class="card-img-top" alt="image">
+                <div class="card-body">
+                  <h5 class="card-title">POSITIONING YOURSELF AS A STAKEHOLDER</h5>
+                  <p class="card-text">Soybean is a leguminous vegetable of the pea family that grows in tropical, subtropical.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col mb-4">
+              <div class="card">
+                <img src="img/img3.jpg" class="card-img-top" alt="image">
+                <div class="card-body">
+                  <h5 class="card-title">A GUIDE TO GIVING HENS THE BEST START IN LIFE</h5>
+                  <p class="card-text">Getting pullet flocks to the correct, uniform weight, with a robust immune system before laying…</p>
+                </div>
+              </div>
+            </div>
         </div>
 
 
